--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/DetailsSaved.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/DetailsSaved.cshtml
@@ -13,7 +13,7 @@
                 <p class="govuk-body">
                     Any changes will show in the directory straight away.
                 </p>
-                    <button type="submit" class="govuk-button">
+                    <button type="submit" class="govuk-button" data-testid="homepage-button">
                         Go to home page
                     </button>
             </div>
