Upgrade FamilyHubs.ServiceDirectory.Shared 1.1.13

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
@@ -27,15 +27,15 @@
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                     @if (Model.UserFlow == "ManageService")
                     {
-                        <h1 class="govuk-fieldset__heading">
+                        <span class="govuk-fieldset__heading">
                             @Model.OrganisationViewModel.ServiceName
-                        </h1>
+                        </span>
                     }
                     else
                     {
-                        <h1 class="govuk-fieldset__heading">
+                        <span class="govuk-fieldset__heading">
                             Check the service details
-                        </h1>
+                        </span>
                     }
                 </legend>
 
