--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/TypeOfService.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/TypeOfService.cshtml
@@ -5,11 +5,11 @@
 @{
     if (Model.UserFlow == "ManageService" && Model.LastPage == CheckServiceDetailsPageName)
     {
-        <a asp-page="/OrganisationAdmin/CheckServiceDetails" class="govuk-back-link">Back</a>
+        <a asp-page="/OrganisationAdmin/CheckServiceDetails" class="govuk-back-link" data-testid="button-back">Back</a>
     }
     else
     {
-        <a asp-page="/OrganisationAdmin/ServiceName" class="govuk-back-link">Back</a>
+        <a asp-page="/OrganisationAdmin/ServiceName" class="govuk-back-link" data-testid="button-back">Back</a>
     }
 }
 
@@ -25,7 +25,7 @@
                     <div class="govuk-error-summary__body">
                         <ul class="govuk-list govuk-error-summary__list">
                             <li>
-                                <a href="#organisation">Please select one option</a>
+                                <a href="#organisation" data-testid="error-message">Please select one option</a>
                             </li>
                         </ul>
                     </div>
@@ -51,7 +51,7 @@
                                 </p>
                                 <p class="govuk-error-message">
                                     <span class="govuk-visually-hidden">Error:</span>
-                                    <span asp-validation-for="@Model.SubcategorySelection"></span>
+                                    <span asp-validation-for="@Model.SubcategorySelection" data-testid="error-subcategory"></span>
                                 </p>
                             }
 
