--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
@@ -159,7 +159,7 @@
                         </div>
                     }
 
-                    @*@if (@Model.OrganisationViewModel?.Familychoice == "Yes")
+                    @if (@Model.OrganisationViewModel?.Familychoice == "Yes")
                     {
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
@@ -175,7 +175,7 @@
                             </dd>
                         </div>
                     }
-*@
+
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
                             For children and young people?
