--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
@@ -138,7 +138,7 @@
                         </div>
                     }
 
-                    @if (@Model.OrganisationViewModel?.Familychoice == "Yes")
+                   @* @if (@Model.OrganisationViewModel?.Familychoice == "Yes")
                     {
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
@@ -153,7 +153,7 @@
                                 </a>
                             </dd>
                         </div>
-                    }
+                    }*@
 
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
